--- a/frontend/adopt-me/src/index.html
+++ b/frontend/adopt-me/src/index.html
@@ -14,8 +14,17 @@
     <script src="https://unpkg.com/react-dom@16.8.4/umd/react-dom.development.js"></script>
     <script>
         const App = () => {
-            
+            return React.createElement(
+                "div",
+                {},
+                React.createElement("h1", {}, "Adopt Me!")
+            );      
         }
+
+        ReactDOM.render(
+            React.createElement(App),
+            document.getElementById('root')
+        );
     </script>
 </body>
 </html>
