--- a/frontend/adopt-me/src/index.html
+++ b/frontend/adopt-me/src/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="root">Not rendered</div>
+    <div id="modal"></div>
 
     <script src="./App.js"></script>
   </body>
